--- a/src/App.css
+++ b/src/App.css
@@ -43,11 +43,12 @@
 .boxes {
   padding: 0 20px;
   display: grid;
-  gap: 20px;
   grid-template-columns: repeat(5, 50px);
   grid-template-rows: repeat(2, 50px);
+  gap: 20px;
 }
 
+/*
 [class^="box-"] {
   font-size: 30px;
   background: #fff;
@@ -56,6 +57,24 @@
   place-items: center;
   border-radius: 5px;
   cursor: pointer;
+}
+*/
+
+.btn-div {
+  font-size: 30px;
+  background: #fff;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  display: grid;
+  place-items: center;
+  border-radius: 5px;
+  cursor: pointer;
+
+}
+
+button {
+  border: none;
+  background: transparent;
+  font-size: 1.2rem;
 }
 
 .btn-roll {
