--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@
 }
 */
 
-.btn-div {
+.die-face {
   font-size: 30px;
   background: #fff;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
@@ -71,10 +71,10 @@
 
 }
 
-button {
+.die-num {
   border: none;
   background: transparent;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 .btn-roll {
