--- a/src/App.css
+++ b/src/App.css
@@ -62,18 +62,16 @@
 
 .die-face {
   font-size: 30px;
-  background: #fff;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   display: grid;
-  place-items: center;
+  justify-content: center;
+  align-content: center;
   border-radius: 5px;
   cursor: pointer;
 
 }
 
 .die-num {
-  border: none;
-  background: transparent;
   font-size: 1.5rem;
 }
 
