--- a/src/App.css
+++ b/src/App.css
@@ -2,73 +2,58 @@
   box-sizing: border-box;
 }
 
-.container {
-  width: 38%;
-  height: 500px;
-  margin: 50px auto;
+body {
+  margin: 0;
   background: #0B2434;
-  display: grid;
-  place-items: center;
 }
 
-.box_container {
-  width: 92%;
-  height: 90%;
+main {
+  width: 38%;
+  height: 500px;
+  margin: 50px auto auto auto;
   background: #F5F5F5;
-  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.container {
   display: grid;
-  place-items: center;
+  grid-template: auto auto / repeat(5, 1fr);
+  gap: 20px;
 }
 
 .game-title {
-  margin-bottom: -65px;
   font-family: 'Karla', sans-serif;
   font-weight: bold;
   text-align: center;
   letter-spacing: -0.03em;
   color: #2B283A;
+  margin-bottom: -60px;
 }
 
 .content {
-  width: 70%;
-  margin: 0 auto -50px auto;
+  width: 69%;
+  margin-bottom: -40px;
   font-family: 'Inter', sans-serif;
-  font-size: 13.1072px;
+  font-size: 1rem;
   line-height: 20px;
   color: #4A4E74;
   text-align: center;
   letter-spacing: -0.03em;
 }
 
-.boxes {
-  padding: 0 20px;
-  display: grid;
-  grid-template-columns: repeat(5, 50px);
-  grid-template-rows: repeat(2, 50px);
-  gap: 20px;
-}
-
-/*
-[class^="box-"] {
-  font-size: 30px;
-  background: #fff;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
-  display: grid;
-  place-items: center;
-  border-radius: 5px;
-  cursor: pointer;
-}
-*/
-
 .die-face {
-  font-size: 30px;
+  width: 50px;
+  height: 50px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   display: grid;
   justify-content: center;
   align-content: center;
   border-radius: 5px;
   cursor: pointer;
-
 }
 
 .die-num {
@@ -76,8 +61,6 @@
 }
 
 .roll-btn {
-  margin-top: -40px;
-  display: inline;
   font-size: 1.3rem;
   padding: 8px 25px;
   background: #5035FF;
@@ -85,6 +68,7 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  margin-bottom: 30px;
 }
 
 .roll-btn:focus {
